# stardust-kernel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  rust-toolchain.toml
.codex/: README.md  config.json
.codex/roles/: architect.md  implementer.md  planner-pm.md  reviewer.md
.codex/templates/: design-template.md  prd-template.md  review-checklist.md
.codex/workflows/: milestone-orchestration.md
.github/: README.md
.github/workflows/: layer-d.yml
docs/: README.md
docs/abi/: linux-syscall-subset.md
docs/fundamentals/: M1-boot-to-rust.md  M2-memory-interrupt-foundation.md  M2b-timer-irq-controller-integration.md  M3-userspace-and-syscalls-a.md  M4-syscalls-b-and-doc-hardening.md  README.md  milestone-theory-template.md
docs/milestones/: M1-followup-run-qemu-ux.md  ROADMAP.md
docs/reviews/: full-repo-review-2026-02-21.md
docs/reviews/M1-boot-to-rust/: review.md
docs/reviews/M2-memory-interrupt-foundation/: review.md
docs/reviews/M2b-timer-irq-controller-integration/: review.md
docs/reviews/M3-userspace-and-syscalls-a/: review.md
docs/reviews/M4-syscalls-b-and-doc-hardening/: review.md
docs/specs/M1-boot-to-rust/: design.md  prd.md
docs/testing/: layer-d-ci.md  test-layers.md  xtask-plan.md
kernel/: Cargo.toml  README.md
kernel/src/: interrupts.rs  lib.rs  main.rs  memory.rs  userspace.rs
scripts/: README.md  build.sh  check-milestone-evidence.py  run-qemu.sh  test-layer-b.sh  test-layer-c.sh  test-layer-d.sh
tools/: README.md
user/: Cargo.toml  README.md
user/src/: lib.rs
(+8 files in other folders)
