[package]
name = "stardust-kernel"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "stardust-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
uefi = { version = "0.33", features = ["alloc", "panic_handler", "global_allocator"] }
stardust-user = { path = "../user" }
